--- a/main.html
+++ b/main.html
@@ -10,9 +10,11 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<div class="header">
+	
+	<header style="text-align:center;"><div class="header">
 		<h2>Shaw's News</h2>
 	</div>
+		</header>
 	<div class="box">
 		<div class="latest-news-section">
 			<h3>Latest News Articles</h3>
